add_library(wrapper_net wrapper) 
add_library(reactor_net Channel Eventloop Poll TimerQueue Timer Acceptor TcpServer TcpConnection)
install(TARGETS reactor_net DESTINATION lib)
file(GLOB Cpp ".h")
install(FILES ${Cpp} DESTINATION include/net)

add_executable(test02 test02.cc)
target_link_libraries(test02 pthread)
target_link_libraries(test02 reactor_net)
target_link_libraries(test02 wrapper_net)
